SET(NIUBI_SETUP_TARGET_NAME osgNanoGUI)

SET(HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${NIUBI_SETUP_TARGET_NAME})
INCLUDE_DIRECTORIES(AFTER ${OSG_INCLUDE_DIR})
# INCLUDE_DIRECTORIES(AFTER ${CEF_DIR})
INCLUDE_DIRECTORIES(AFTER ${NanoVG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(AFTER ${NanoGUI_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(AFTER ${GLAD_INCLUDE_DIR})
INCLUDE_DIRECTORIES(AFTER ${GLEW_INCLUDE_DIR})

INCLUDE_DIRECTORIES(AFTER ${NanoGUI_INCLUDE_DIR}/../ext/eigen)



SET(NIUBI_SETUP_HEADERS

    ${HEADER_PATH}/Version
    ${HEADER_PATH}/Export
    
    # ${HEADER_PATH}/CEF
    # ${HEADER_PATH}/Browser
    
    ${HEADER_PATH}/NanoVG
    ${HEADER_PATH}/NanoGUI

)
SET(NIUBI_SETUP_SOURCES

    # CEF.cpp
    # Browser.cpp
    
    NanoVG.cpp
    NanoGUI.cpp
)


NIUBI_SETUP_LIBRARY(ON)
TARGET_LINK_LIBRARIES( ${NIUBI_SETUP_TARGET_NAME}
    ${EXTERNAL_LIBRARIES}
    debug ${OPENTHREADS_LIBRARY_DEBUG} optimized ${OPENTHREADS_LIBRARY}
    debug ${OSG_LIBRARY_DEBUG} optimized ${OSG_LIBRARY}
    debug ${OSGDB_LIBRARY_DEBUG} optimized ${OSGDB_LIBRARY}
    debug ${OSGUTIL_LIBRARY_DEBUG} optimized ${OSGUTIL_LIBRARY}
    debug ${OSGGA_LIBRARY_DEBUG} optimized ${OSGGA_LIBRARY}
    debug ${OSGVIEWER_LIBRARY_DEBUG} optimized ${OSGVIEWER_LIBRARY}

    # debug ${CEF_LIBRARY_DEBUG} optimized ${CEF_LIBRARY}
    # debug ${CEF_WRAPPER_LIBRARY_DEBUG} optimized ${CEF_WRAPPER_LIBRARY}

	optimized ${GLEW_LIBRARY_RELEASE}      debug ${GLEW_LIBRARY_DEBUG}

    debug ${NanoGUI_LIBRARY_DEBUG} optimized ${NanoGUI_LIBRARY}

	${OPENGL_LIBRARIES}
    )
# NIUBI_SETUP_INSTALL()
# NIUBI_SETUP_INSTALL_INCLUDE()
# NIUBI_SETUP_DOCUMENT()
